--- a/rc.qrc
+++ b/rc.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/new/prefix1">
         <file>WorldTimeIcon.png</file>
+        <file>alert_sound.wav</file>
     </qresource>
 </RCC>
